--- a/style2.css
+++ b/style2.css
@@ -3,12 +3,17 @@ body{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: left bottom, right top;
+
 }
+
+body,html{
+ 	width: 100%;
+ 	overflow-x: hidden;
+ }
 
 header{
 	background-color: orange;
 	height: 50px;
-	padding: 10px;
 	text-align: center;
 	border: 10px solid transparent;
 	padding: 15px;
@@ -17,6 +22,7 @@ header{
 	animation-duration: 5s;
 	animation-delay: 2s;
 	animation-iteration-count: infinite;
+	margin: 5px;
 }
 
 @keyframes example{
@@ -26,7 +32,7 @@ header{
 }
 
 header>h1{
-	color: blue;
+color: blue;
  font-family: Georgia;
  font-weight: bolder;
  margin: 0 auto;
@@ -37,19 +43,28 @@ header>h1{
  	font-size: 150%;
  }
 
+ nav{
+ 	display: flex;
+ 	flex-flow: row wrap;
+ }
+
 nav a{
  font-size: 20px;
  font-weight: bold;
  color: blue;
  background-color: white;
+ padding: 5px;
+ text-align: center;
+ margin: 5px;
 }
 
 nav>a:hover{
 	background-color: pink;
 }
 
+
 article{
-	padding: 10px;
+	margin: 10px;
 	border: 5px solid transparent;
 	padding: 15px;
 	border-image: url("media/boder2.png") 30 round;
@@ -82,10 +97,34 @@ article>img{
 	padding: 10px;
     vertical-align: middle;
 }
+@media only screen and (max-width: 768px){
+	article>img{
+		width: 100%;
+		padding: 0;
+	}
+	}
+
 
 article>video{
-	padding-left: 20px;
+	margin-left: 20px;
 }
+
+
+@media only screen and (max-width: 768px){
+	.anthem{
+		display: flex;
+		flex-flow: column wrap;
+	}
+}
+
+@media only screen and (max-width: 768px){
+	article>video{
+		margin: 0;
+		width: 100%;
+	}
+}
+
+
 
 table{
 	border-collapse: collapse;
@@ -120,6 +159,12 @@ tr:nth-child(even)
 		background-color: white;
 	}
 
+@media only screen and (max-width: 768px){
+	table{
+		margin: 20px;
+	}
+}
+
 .dropbtn {
   background-color: #4CAF50;
   color: white;
@@ -134,6 +179,7 @@ tr:nth-child(even)
   display: inline-block;
   float: right;
   box-shadow: 10px 10px LightGreen;
+  margin: 5px;
 }
 
 .dropdown-content {
@@ -181,11 +227,25 @@ tr:nth-child(even)
 	border-radius: 2px;
 	padding: 5px 0;
 	position: absolute;
-	z-index: -1;
+	z-index: 1;
+	top: 125%;
+	left: 50%;
+	margin-left: -50%;
 }
 
 .tooltip:hover .tooltiptext{
 	visibility: visible;
+}
+
+@media only screen and (max-width: 768px){
+	.container{
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+
+	.tooltip .tooltiptext{
+		width: 100%;
+	}
 }
 
 footer{
@@ -213,7 +273,7 @@ footer>a{
 }
 
 footer>a:link{
-	color: yellow;
+	color: green;
 }
 
 footer>a:visited{
